--- a/Signal/translations/en.lproj/Localizable.strings
+++ b/Signal/translations/en.lproj/Localizable.strings
@@ -718,7 +718,10 @@
 /* label for button shown when an incoming call rings */
 "CALL_CONTROLS_INCOMING_DECLINE" = "decline";
 
-/* Label used to represent a call that used a call link. */
+/* Title used to represent details about a call. */
+"CALL_DETAILS" = "Call Details";
+
+/* Label or title used to represent a call that used a call link. */
 "CALL_LINK" = "Call Link";
 
 /* Button to open a screen to edit the name of a Call Link. Also used as the title of that screen once it opens. */
