Update release notes

--- a/fastlane/metadata/ar-SA/release_notes.txt
+++ b/fastlane/metadata/ar-SA/release_notes.txt
@@ -1,2 +1,1 @@
-• الآن سَيتوقَّف رنين الـ iPhone الخاص بك تلقائيًا إذا قمتَ بالإجابة على اتصالٍ وارد على جهاز متصّل آخر (مثل سيجنال Desktop).
-• أصلحنا أيضًا خطأ في عرض البيانات لِمستخدمي iPadOS 18. 
+• This update improves support for “Limited Access” photo permissions and adds a convenient shortcut to select new photos in your iOS Settings. Take a picture of your Halloween costume idea, change what you share, exchange what you’ll wear, and arrange how you’ll scare.
