--- a/fastlane/metadata/cs/release_notes.txt
+++ b/fastlane/metadata/cs/release_notes.txt
@@ -1,2 +1,1 @@
-• Váš iPhone nyní automaticky přestane zvonit, pokud přijmete příchozí hovor na jiném propojeném zařízení (například Signal Desktop).
-• Opravili jsme také chybu v zobrazení pro uživatele systému iPadOS 18. 
+• This update improves support for “Limited Access” photo permissions and adds a convenient shortcut to select new photos in your iOS Settings. Take a picture of your Halloween costume idea, change what you share, exchange what you’ll wear, and arrange how you’ll scare.
