--- a/fastlane/metadata/da/release_notes.txt
+++ b/fastlane/metadata/da/release_notes.txt
@@ -1,2 +1,1 @@
-• Nu stopper din iPhone automatisk med at ringe, hvis du besvarer et indgående opkald på en anden forbundet enhed (såsom Signal Desktop). At beslutte, om du rent faktisk vil tale med dem, er stadig et spørgsmål, som kun du kan svare på.
-• Vi har også rettet en fejl, der forhindrede ulæste indikatorer og andre statusmærker i at blive vist på fanerne Historier og Opkald på iPadOS 18. 
+• This update improves support for “Limited Access” photo permissions and adds a convenient shortcut to select new photos in your iOS Settings. Take a picture of your Halloween costume idea, change what you share, exchange what you’ll wear, and arrange how you’ll scare.
