--- a/fastlane/metadata/es-MX/release_notes.txt
+++ b/fastlane/metadata/es-MX/release_notes.txt
@@ -1,2 +1,1 @@
-• Ahora, si respondes una llamada entrante en un dispositivo que hayas vinculado (como Signal Desktop), tu iPhone dejará de sonar automáticamente. Eso sí, decidir si realmente quieres hablar o no con esa persona sigue dependiendo exclusivamente de ti.
-• También hemos corregido un error que hacía que los indicadores de no leído y otros estados no aparecieran en las pestañas Historias y Llamadas en iPadOS 18. 
+• This update improves support for “Limited Access” photo permissions and adds a convenient shortcut to select new photos in your iOS Settings. Take a picture of your Halloween costume idea, change what you share, exchange what you’ll wear, and arrange how you’ll scare.
