--- a/fastlane/metadata/fi/release_notes.txt
+++ b/fastlane/metadata/fi/release_notes.txt
@@ -1,2 +1,1 @@
-• Nyt iPhonesi lakkaa soimasta automaattisesti, jos vastaat saapuvaan puheluun toisella yhdistetyllä laitteella (kuten Signal Desktopilla).
-• Korjasimme myös näyttövirheen iPadOS 18:n käyttäjillä. 
+• This update improves support for “Limited Access” photo permissions and adds a convenient shortcut to select new photos in your iOS Settings. Take a picture of your Halloween costume idea, change what you share, exchange what you’ll wear, and arrange how you’ll scare.
