--- a/fastlane/metadata/fr-CA/release_notes.txt
+++ b/fastlane/metadata/fr-CA/release_notes.txt
@@ -1,2 +1,1 @@
-• Désormais, votre iPhone arrêtera de sonner lorsque vous répondrez à un appel Signal depuis un autre appareil associé (par exemple depuis votre ordinateur, via Signal Desktop). Vous ne savez pas si vous avez vraiment envie de répondre ? On vous laisse répondre à cette question.
-• Sur iPadOS 18, un bug empêchait l'affichage des indicateurs de messages non lus et d'autres badges d'état dans les onglets "Appels" et "Stories". Ce bug fait maintenant partie du passé. 
+• This update improves support for “Limited Access” photo permissions and adds a convenient shortcut to select new photos in your iOS Settings. Take a picture of your Halloween costume idea, change what you share, exchange what you’ll wear, and arrange how you’ll scare.
