--- a/fastlane/metadata/he/release_notes.txt
+++ b/fastlane/metadata/he/release_notes.txt
@@ -1,2 +1,1 @@
-• עכשיו ה–iPhone שלך יפסיק לצלצל אוטומטית אם ענית לשיחה נכנסת במכשיר מקושר אחר (כמו Signal לשולחן העבודה).
-• תיקנו גם באג תצוגה עבור משתמשים ב–iPadOS 18. 
+• This update improves support for “Limited Access” photo permissions and adds a convenient shortcut to select new photos in your iOS Settings. Take a picture of your Halloween costume idea, change what you share, exchange what you’ll wear, and arrange how you’ll scare.
