--- a/fastlane/metadata/hi/release_notes.txt
+++ b/fastlane/metadata/hi/release_notes.txt
@@ -1,2 +1,1 @@
-• यदि आप अपने iPhone से लिंक किए गए डिवाइस (Signal डेस्कटॉप) पर इसका उत्तर देते हैं तो आपका iPhone स्वचालित रूप से बजना बंद कर देगा। आपको उनसे बात करनी है या नहीं - इस सवाल का जवाब सिर्फ आप ही दे सकते हैं।
-• हमने एक बग भी ठीक किया है जो अपठित संदेशों और अन्य स्टेटस बैज को iPadOS 18 पर स्टोरीज़ और कॉल टैब में प्रदर्शित होने से रोकता था। 
+• This update improves support for “Limited Access” photo permissions and adds a convenient shortcut to select new photos in your iOS Settings. Take a picture of your Halloween costume idea, change what you share, exchange what you’ll wear, and arrange how you’ll scare.
