--- a/fastlane/metadata/hr/release_notes.txt
+++ b/fastlane/metadata/hr/release_notes.txt
@@ -1,2 +1,1 @@
-• Od sada će vaš iPhone automatski prestati zvoniti ako odgovorite na dolazni poziv na drugom povezanom uređaju (npr. preko Signala za desktop na računalu).
-• Također smo ispravili pogrešku u prikazivanju obavijesti u sustavu iPadOS 18. 
+• This update improves support for “Limited Access” photo permissions and adds a convenient shortcut to select new photos in your iOS Settings. Take a picture of your Halloween costume idea, change what you share, exchange what you’ll wear, and arrange how you’ll scare.
