--- a/fastlane/metadata/hu/release_notes.txt
+++ b/fastlane/metadata/hu/release_notes.txt
@@ -1,2 +1,1 @@
-• Mostantól az iPhone-od automatikusan leállítja a csengetést, ha egy másik kapcsolt eszközön (például a Signal Desktopon) fogadsz egy bejövő hívást.
-• Kijavítottunk egy megjelenítési hibát is az iPadOS 18 felhasználói számára. 
+• This update improves support for “Limited Access” photo permissions and adds a convenient shortcut to select new photos in your iOS Settings. Take a picture of your Halloween costume idea, change what you share, exchange what you’ll wear, and arrange how you’ll scare.
