--- a/fastlane/metadata/id/release_notes.txt
+++ b/fastlane/metadata/id/release_notes.txt
@@ -1,2 +1,1 @@
-• Kini iPhone Anda akan otomatis berhenti berdering jika Anda menjawab panggilan masuk di perangkat lain yang terhubung (seperti Signal Desktop).
-• Kami juga memperbaiki bug tampilan untuk pengguna iPadOS 18. 
+• This update improves support for “Limited Access” photo permissions and adds a convenient shortcut to select new photos in your iOS Settings. Take a picture of your Halloween costume idea, change what you share, exchange what you’ll wear, and arrange how you’ll scare.
