--- a/fastlane/metadata/it/release_notes.txt
+++ b/fastlane/metadata/it/release_notes.txt
@@ -1,2 +1,1 @@
-• Da ora il tuo iPhone smetterà di suonare in automatico se rispondi a una chiamata in arrivo su un altro dispositivo collegato (come Signal Desktop). Ma la vera domanda è: tu risponderai oppure lascerai squillare a vuoto?
-• Abbiamo anche risolto un bug che impediva agli indicatori di contenuti non letti (e altri tipi di badge) di apparire nelle schermate delle Storie e delle Chiamate su iPadOS 18. 
+• This update improves support for “Limited Access” photo permissions and adds a convenient shortcut to select new photos in your iOS Settings. Take a picture of your Halloween costume idea, change what you share, exchange what you’ll wear, and arrange how you’ll scare.
