--- a/fastlane/metadata/ko/release_notes.txt
+++ b/fastlane/metadata/ko/release_notes.txt
@@ -1,2 +1,1 @@
-• 이제 Signal 데스크톱 등 다른 연결된 기기에서 전화를 받으면 iPhone이 자동으로 벨소리를 멈춥니다.
-• iPadOS 18의 사용자 디스플레이 버그도 수정했습니다. 
+• This update improves support for “Limited Access” photo permissions and adds a convenient shortcut to select new photos in your iOS Settings. Take a picture of your Halloween costume idea, change what you share, exchange what you’ll wear, and arrange how you’ll scare.
