--- a/fastlane/metadata/nl-NL/release_notes.txt
+++ b/fastlane/metadata/nl-NL/release_notes.txt
@@ -1,2 +1,1 @@
-• Je iPhone stopt nu automatisch met overgaan als je een inkomende oproep beantwoordt op een ander gekoppeld apparaat (zoals Signal Desktop). Maar je beslist natuurlijk nog steeds zelf of je iemand wilt spreken of niet.
-• We hebben ook een fout opgelost die ervoor zorgde dat ongelezen indicatoren en andere statusbadges niet verschenen op de tabbladen ‘Verhalen’ en ‘Oproepen’ in iPadOS 18. 
+• This update improves support for “Limited Access” photo permissions and adds a convenient shortcut to select new photos in your iOS Settings. Take a picture of your Halloween costume idea, change what you share, exchange what you’ll wear, and arrange how you’ll scare.
