--- a/fastlane/metadata/no/release_notes.txt
+++ b/fastlane/metadata/no/release_notes.txt
@@ -1,2 +1,1 @@
-• Nå slutter iPhone automatisk å ringe dersom du svarer på et anrop på en annen tilkoblet enhet (f. eks. Signal Desktop).
-• Vi har også rettet opp i en visningsfeil for brukere på iPadOS 18. 
+• This update improves support for “Limited Access” photo permissions and adds a convenient shortcut to select new photos in your iOS Settings. Take a picture of your Halloween costume idea, change what you share, exchange what you’ll wear, and arrange how you’ll scare.
