--- a/fastlane/metadata/pt-BR/release_notes.txt
+++ b/fastlane/metadata/pt-BR/release_notes.txt
@@ -1,2 +1,1 @@
-• Com esta atualização, seu iPhone vai parar de tocar automaticamente se você atender a uma chamada em outro dispositivo vinculado, como o Signal Desktop.
-• Também corrigimos um erro que impedia a exibição de indicadores de não lidos e outros ícones de notificação de status nas abas Stories e Chamadas no iPadOS 18. 
+• This update improves support for “Limited Access” photo permissions and adds a convenient shortcut to select new photos in your iOS Settings. Take a picture of your Halloween costume idea, change what you share, exchange what you’ll wear, and arrange how you’ll scare.
