--- a/fastlane/metadata/pt-PT/release_notes.txt
+++ b/fastlane/metadata/pt-PT/release_notes.txt
@@ -1,2 +1,1 @@
-• Agora o seu iPhone para automaticamente de tocar se atender uma chamada noutro dispositivo vinculado (como o Signal Desktop).
-• Também corrigimos um erro de visualização para utilizadores no iPadOS 18. 
+• This update improves support for “Limited Access” photo permissions and adds a convenient shortcut to select new photos in your iOS Settings. Take a picture of your Halloween costume idea, change what you share, exchange what you’ll wear, and arrange how you’ll scare.
