--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,2 +1,1 @@
-• Теперь ваш iPhone автоматически перестанет звонить, если вы ответите на входящий звонок на другом связанном устройстве (например, Signal Desktop). Правда, остается вопрос, действительно ли вы хотите разговаривать с этим человеком? Но на него можете ответить только вы.
-• А ещё мы исправили ошибку, из-за которой непрочитанные индикаторы и другие значки статуса не отображались на вкладках «Истории» и «Звонки» в iPadOS 18. 
+• This update improves support for “Limited Access” photo permissions and adds a convenient shortcut to select new photos in your iOS Settings. Take a picture of your Halloween costume idea, change what you share, exchange what you’ll wear, and arrange how you’ll scare.
