--- a/fastlane/metadata/sk/release_notes.txt
+++ b/fastlane/metadata/sk/release_notes.txt
@@ -1,2 +1,1 @@
-• Teraz váš iPhone automaticky prestane zvoniť, ak prijmete prichádzajúci hovor na inom prepojenom zariadení (napríklad Signal Desktop).
-• Opravili sme tiež chybu zobrazovania pre používateľov systému iPadOS 18. 
+• This update improves support for “Limited Access” photo permissions and adds a convenient shortcut to select new photos in your iOS Settings. Take a picture of your Halloween costume idea, change what you share, exchange what you’ll wear, and arrange how you’ll scare.
