--- a/fastlane/metadata/sv/release_notes.txt
+++ b/fastlane/metadata/sv/release_notes.txt
@@ -1,2 +1,1 @@
-• Nu slutar din iPhone automatiskt att ringa om du svarar på ett inkommande samtal på en annan länkad enhet (t.ex. Signal Desktop).
-• Vi har också åtgärdat en visningsbugg för användare på iPadOS 18. 
+• This update improves support for “Limited Access” photo permissions and adds a convenient shortcut to select new photos in your iOS Settings. Take a picture of your Halloween costume idea, change what you share, exchange what you’ll wear, and arrange how you’ll scare.
