--- a/fastlane/metadata/th/release_notes.txt
+++ b/fastlane/metadata/th/release_notes.txt
@@ -1,2 +1,1 @@
-• ปรับปรุงให้ iPhone หยุดการส่งเสียงเรียกสายอัตโนมัติเมื่อคุณกดรับสายเรียกเข้าบนอุปกรณ์ที่เชื่อมโยงแล้ว (เช่น Signal เดสก์ท็อป)
-• เรายังแก้ไขบั๊กเกี่ยวกับการแสดงป้ายกำกับและสัญลักษณ์สำหรับผู้ใช้ iPadOS 18 อีกด้วย 
+• This update improves support for “Limited Access” photo permissions and adds a convenient shortcut to select new photos in your iOS Settings. Take a picture of your Halloween costume idea, change what you share, exchange what you’ll wear, and arrange how you’ll scare.
