--- a/fastlane/metadata/tr/release_notes.txt
+++ b/fastlane/metadata/tr/release_notes.txt
@@ -1,2 +1,1 @@
-• Artık bir başka bağlı cihazdan (Signal Desktop gibi) gelen bir aramayı yanıtladığında, iPhone'un otomatik olarak çalmayı durduracaktır. Arayanla gerçekten konuşmak isteyip istemediğine karar vermek sadece senin bilebileceğin bir iştir.
-• Ayrıca, iPadOS 18 kullanıcılarını etkileyen bir görüntüleme hatasını da düzelttik. 
+• This update improves support for “Limited Access” photo permissions and adds a convenient shortcut to select new photos in your iOS Settings. Take a picture of your Halloween costume idea, change what you share, exchange what you’ll wear, and arrange how you’ll scare.
