--- a/fastlane/metadata/zh-Hans/release_notes.txt
+++ b/fastlane/metadata/zh-Hans/release_notes.txt
@@ -1,2 +1,1 @@
-• 现在如果您在另一台已连接设备上（例如 Signal 桌面版）接听来电，iPhone 上的来电铃声将会自动停止响铃。
-• 我们还修复了 iPadOS 18 上的一个显示漏洞。 
+• This update improves support for “Limited Access” photo permissions and adds a convenient shortcut to select new photos in your iOS Settings. Take a picture of your Halloween costume idea, change what you share, exchange what you’ll wear, and arrange how you’ll scare.
