--- a/fastlane/metadata/zh-Hant/release_notes.txt
+++ b/fastlane/metadata/zh-Hant/release_notes.txt
@@ -1,2 +1,1 @@
-• 現在，如果你在另一個已連結裝置（例如 Signal 桌面版）上接聽來電，你的 iPhone 將自動停止響鈴。
-• 我們還修正了一個錯誤，就是導致未讀標記和其他狀態標記無法出現在 iPadOS 18 的限時動態和通話選項標籤中。 
+• This update improves support for “Limited Access” photo permissions and adds a convenient shortcut to select new photos in your iOS Settings. Take a picture of your Halloween costume idea, change what you share, exchange what you’ll wear, and arrange how you’ll scare.
