--- a/Signal/translations/fr.lproj/Localizable.strings
+++ b/Signal/translations/fr.lproj/Localizable.strings
@@ -8,7 +8,7 @@
 "ACCEPT_NEW_IDENTITY_ACTION" = "Accepter le nouveau numéro de sécurité";
 
 /* Accessibility label for attachment. */
-"ACCESSIBILITY_LABEL_ATTACHMENT" = "Fichier joint";
+"ACCESSIBILITY_LABEL_ATTACHMENT" = "Pièce jointe";
 
 /* Accessibility label for audio. */
 "ACCESSIBILITY_LABEL_AUDIO" = "Audio";
@@ -266,13 +266,13 @@
 "APPLE_PAY_DONATION_ERROR_AUTHENTICATION_REQUIRED" = "Essayez un autre mode de paiement ou contactez votre banque pour plus d’informations.";
 
 /* Apple Pay donation error for decline failures where the user may need to contact their card or bank. */
-"APPLE_PAY_DONATION_ERROR_CALL_ISSUER" = "Vérifiez si votre mode de paiement est à jour dans Apple Pay. Dans le cas contraire, mettez-le à jour puis réessayez. Si le problème persiste, veuillez contacter votre banque.";
+"APPLE_PAY_DONATION_ERROR_CALL_ISSUER" = "Vérifiez si votre mode de paiement est à jour dans Apple Pay. Si tel n'est pas le cas, mettez-le à jour, puis réessayez. Si le problème persiste, veuillez contacter votre banque.";
 
 /* Apple Pay donation error for decline failures where the card is not supported. */
 "APPLE_PAY_DONATION_ERROR_CARD_NOT_SUPPORTED" = "Votre carte ne permet pas ce type d’achat. Essayez un autre mode de paiement ou contactez votre banque pour en savoir plus.";
 
 /* Apple Pay donation error for decline failures where the card has expired. */
-"APPLE_PAY_DONATION_ERROR_EXPIRED_CARD" = "Votre carte a expiré. Vérifiez si votre mode de paiement est à jour dans Apple Pay. Dans le cas contraire, mettez-le à jour et réessayez.";
+"APPLE_PAY_DONATION_ERROR_EXPIRED_CARD" = "Votre carte est arrivée à expiration. Vérifiez si votre mode de paiement est à jour dans Apple Pay. Si tel n'est pas le cas, mettez-le à jour et réessayez.";
 
 /* Apple Pay donation error for decline failures where the card number is incorrect. */
 "APPLE_PAY_DONATION_ERROR_INCORRECT_CARD_NUMBER" = "Le numéro de votre carte est incorrect. Vérifiez si votre mode de paiement a bien été saisi dans Apple Pay. Dans le cas contraire, mettez-le à jour et réessayez.";
@@ -299,7 +299,7 @@
 "APPLE_PAY_DONATION_ERROR_OTHER" = "Essayez un autre mode de paiement ou contactez votre banque pour plus d’informations.";
 
 /* Apple Pay donation error for decline failures where the payment cannot be authorized. */
-"APPLE_PAY_DONATION_ERROR_PAYMENT_CANNOT_BE_AUTHORIZED" = "Vérifiez si votre mode de paiement est à jour dans Apple Pay. Dans le cas contraire, mettez-le à jour et réessayez.";
+"APPLE_PAY_DONATION_ERROR_PAYMENT_CANNOT_BE_AUTHORIZED" = "Vérifiez si votre mode de paiement est à jour dans Apple Pay. Si tel n'est pas le cas, mettez-le à jour et réessayez.";
 
 /* On the iOS home screen, if you tap and hold the Signal icon, this shortcut will appear. Tapping it will let users send a new message. You may want to refer to similar behavior in other iOS apps, such as Messages, for equivalent strings. */
 "APPLICATION_SHORTCUT_NEW_MESSAGE" = "Nouveau message";
@@ -320,7 +320,7 @@
 "ASPECT_RATIO_X_BY_Y" = "%1$@:%2$@";
 
 /* Error that outgoing attachments could not be exported. */
-"ATTACHMENT_APPROVAL_FAILED_TO_EXPORT" = "Échec d’exportation du fichier joint.";
+"ATTACHMENT_APPROVAL_FAILED_TO_EXPORT" = "Impossible d'exporter la pièce jointe.";
 
 /* alert text when Signal was unable to save a copy of the attachment to the system photo library */
 "ATTACHMENT_APPROVAL_FAILED_TO_SAVE" = "Échec d’enregistrement";
@@ -344,10 +344,10 @@
 "ATTACHMENT_APPROVAL_MEDIA_QUALITY_TITLE" = "Qualité du média";
 
 /* Generic filename for an attachment with no known name */
-"ATTACHMENT_DEFAULT_FILENAME" = "Fichier joint";
+"ATTACHMENT_DEFAULT_FILENAME" = "Pièce jointe";
 
 /* The title of the 'attachment error' alert. */
-"ATTACHMENT_ERROR_ALERT_TITLE" = "Erreur d’envoi du fichier joint";
+"ATTACHMENT_ERROR_ALERT_TITLE" = "Impossible d'envoyer la pièce jointe";
 
 /* Attachment error message for image attachments which could not be converted to JPEG */
 "ATTACHMENT_ERROR_COULD_NOT_CONVERT_TO_JPEG" = "Impossible de convertir l’image.";
@@ -368,13 +368,13 @@
 "ATTACHMENT_ERROR_FILE_SIZE_TOO_LARGE" = "Pièce jointe trop volumineuse.";
 
 /* Attachment error message for attachments with invalid data */
-"ATTACHMENT_ERROR_INVALID_DATA" = "Le fichier joint comporte du contenu non valide.";
+"ATTACHMENT_ERROR_INVALID_DATA" = "La pièce jointe comporte du contenu non valide.";
 
 /* Attachment error message for attachments with an invalid file format */
-"ATTACHMENT_ERROR_INVALID_FILE_FORMAT" = "Le fichier joint présente un format de fichier invalide.";
+"ATTACHMENT_ERROR_INVALID_FILE_FORMAT" = "Le format de la pièce jointe est incorrect.";
 
 /* Attachment error message for attachments without any data */
-"ATTACHMENT_ERROR_MISSING_DATA" = "Le fichier joint est vide.";
+"ATTACHMENT_ERROR_MISSING_DATA" = "La pièce jointe est vide.";
 
 /* Accessibility hint describing what you can do with the attachment button */
 "ATTACHMENT_HINT" = "Choisissez le média à envoyer";
@@ -422,7 +422,7 @@
 "ATTACHMENT_KEYBOARD_PHOTOS" = "Photos";
 
 /* Accessibility label for attaching photos */
-"ATTACHMENT_LABEL" = "Fichier joint";
+"ATTACHMENT_LABEL" = "Pièce jointe";
 
 /* Alert title when picking a document fails for an unknown reason */
 "ATTACHMENT_PICKER_DOCUMENTS_FAILED_ALERT_TITLE" = "Échec de sélection du document.";
@@ -476,7 +476,7 @@
 "AVATAR_SETTINGS_VIEW_PHOTO_BUTTON" = "photo";
 
 /* Title for the previously used and preset avatar section. */
-"AVATAR_SETTINGS_VIEW_SELECT_AN_AVATAR" = "Sélectionner un avatar";
+"AVATAR_SETTINGS_VIEW_SELECT_AN_AVATAR" = "Sélectionner une photo de profil";
 
 /* Text indicating the user can create a new avatar with text */
 "AVATAR_SETTINGS_VIEW_TEXT_BUTTON" = "texte";
@@ -1730,7 +1730,7 @@
 "CREATE_USERNAME_MEGAPHONE_TITLE" = "De nouvelles façons de rester en contact";
 
 /* Credit/debit card donation error for decline failures where the card has expired. */
-"CREDIT_OR_DEBIT_CARD_DONATION_ERROR_EXPIRED_CARD" = "Votre carte a expiré. Veuillez vérifier que les informations de votre carte sont correctes puis réessayez.";
+"CREDIT_OR_DEBIT_CARD_DONATION_ERROR_EXPIRED_CARD" = "Votre carte  est arrivée à expiration. Vérifiez que les informations de votre carte sont à jour, puis réessayez.";
 
 /* Credit/debit card donation error for decline failures where the card number is incorrect. */
 "CREDIT_OR_DEBIT_CARD_DONATION_ERROR_INCORRECT_CARD_NUMBER" = "Le numéro de votre carte est erroné. Veuillez vérifier que les informations de votre carte sont correctes puis réessayez.";
@@ -2192,7 +2192,7 @@
 "DONATE_ON_BEHALF_OF_A_FRIEND_ADDITIONAL_MESSAGE_PLACEHOLDER" = "Ajouter un message";
 
 /* If a donation badge has been sent, indicates that it's expired and can no longer be redeemed. This is shown in the chat. */
-"DONATE_ON_BEHALF_OF_A_FRIEND_CHAT_EXPIRED" = "Expiré";
+"DONATE_ON_BEHALF_OF_A_FRIEND_CHAT_EXPIRED" = "Macaron arrivé à expiration";
 
 /* Message in an alert presented when the user tries to make a donation, but already has an iDEAL donation that is currently awaiting approval. */
 "DONATE_SCREEN_ERROR_MESSAGE_APPROVE_IDEAL_DONATION_BEFORE_MAKING_ANOTHER_DONATION" = "Votre don iDEAL est en cours de traitement. Consultez votre application bancaire pour approuver votre paiement avant d'effectuer un nouveau don.";
@@ -2693,7 +2693,7 @@
 "ERROR_DESCRIPTION_UNREGISTERED_RECIPIENT" = "Ce contact n'utilise pas Signal.";
 
 /* Error message indicating that attachment download(s) failed. */
-"ERROR_MESSAGE_ATTACHMENT_DOWNLOAD_FAILED" = "Échec de téléchargement du fichier joint.";
+"ERROR_MESSAGE_ATTACHMENT_DOWNLOAD_FAILED" = "Impossible de télécharger la pièce jointe.";
 
 /* Error message indicating that attachment upload(s) failed. */
 "ERROR_MESSAGE_ATTACHMENT_UPLOAD_FAILED" = "Impossible d’importer la pièce jointe.";
@@ -2750,7 +2750,7 @@
 "ERROR_SENDING_DEREGISTERED" = "Votre appareil n’est plus inscrit. Veuillez le réinscrire pour continuer à envoyer des messages.";
 
 /* Error indicating a send failure due to an expired application. */
-"ERROR_SENDING_EXPIRED" = "Votre version de Signal est expirée. Veuillez la mettre à jour pour continuer à envoyer des messages.";
+"ERROR_SENDING_EXPIRED" = "Votre version de Signal  est arrivée à expiration. Passez à la nouvelle version pour continuer à envoyer des messages.";
 
 /* Format string for 'unregistered user' error. Embeds {{the unregistered user's name or signal id}}. */
 "ERROR_UNREGISTERED_USER_FORMAT" = "Utilisateur non inscrit : %1$@";
@@ -2762,7 +2762,7 @@
 "EXIT_REREGISTRATION" = "Quitter le processus d’inscription";
 
 /* Label notifying the user that the app has expired. */
-"EXPIRATION_ERROR" = "Cette version de Signal a expiré. Veuillez la mettre à jour pour continuer à envoyer et recevoir des messages.";
+"EXPIRATION_ERROR" = "Cette version de Signal est arrivée à expiration. Pour continuer d'échanger des messages, passez à la nouvelle version.";
 
 /* If the user's app is too old, they'll be shown a warning asking them to upgrade. This is the text on the warning, and tapping it will open the App Store page for Signal. */
 "EXPIRATION_WARNING_ACTION_TITLE" = "Mettre Signal à jour maintenant";
@@ -2858,7 +2858,7 @@
 "GALLERY_TILES_LOADING_OLDER_LABEL" = "Chargement des médias plus anciens…";
 
 /* A label for generic attachments. */
-"GENERIC_ATTACHMENT_LABEL" = "Fichier joint";
+"GENERIC_ATTACHMENT_LABEL" = "Pièce jointe";
 
 /* notification title indicating the user generically has a new message */
 "GENERIC_INCOMING_MESSAGE_NOTIFICATION" = "Nouveau message";
@@ -3767,7 +3767,7 @@
 "IMAGE_PICKER_CAN_SELECT_NO_MORE_TOAST_FORMAT" = "Vous ne pouvez pas partager plus de %1$@ éléments.";
 
 /* alert title */
-"IMAGE_PICKER_FAILED_TO_PROCESS_ATTACHMENTS" = "Échec de sélection du fichier joint.";
+"IMAGE_PICKER_FAILED_TO_PROCESS_ATTACHMENTS" = "Impossible de sélectionner la pièce jointe.";
 
 /* Call setup status label */
 "IN_CALL_CONNECTING" = "Connexion…";
@@ -3944,7 +3944,7 @@
 "KEY_COMMAND_ARCHIVE" = "Archiver la conversation";
 
 /* A keyboard command to open the current conversation's attachment picker. */
-"KEY_COMMAND_ATTACHMENTS" = "Afficher les fichiers joints";
+"KEY_COMMAND_ATTACHMENTS" = "Afficher les pièces jointes";
 
 /* A keyboard command to open the current conversation's settings. */
 "KEY_COMMAND_CONVERSATION_INFO" = "Accéder aux informations de la conversation";
@@ -4259,7 +4259,7 @@
 "MESSAGE_DETAILS_EDIT_HISTORY_TITLE" = "Voir l’historique des modifications";
 
 /* Title for the 'sent from' section on the 'message details' view. */
-"MESSAGE_DETAILS_VIEW_SENT_FROM_TITLE" = "Envoyé de";
+"MESSAGE_DETAILS_VIEW_SENT_FROM_TITLE" = "Envoyé par";
 
 /* Label for file size of attachments in the 'message metadata' view. */
 "MESSAGE_METADATA_VIEW_ATTACHMENT_FILE_SIZE" = "Taille du fichier";
@@ -4460,7 +4460,7 @@
 "MESSAGE_STATUS_FAILED_SHORT" = "En échec";
 
 /* Label indicating that a message was only sent to some recipients. */
-"MESSAGE_STATUS_PARTIALLY_SENT" = "Envoyé partiellement, toucher pour obtenir des détails";
+"MESSAGE_STATUS_PARTIALLY_SENT" = "Envoi partiel. Toucher pour afficher plus d'infos.";
 
 /* Label indicating that a message send was paused. */
 "MESSAGE_STATUS_PENDING" = "L’envoi a été mis en pause";
@@ -5831,7 +5831,7 @@
 "QUOTED_REPLY_STORY_AUTHOR_INDICATOR_FORMAT" = "Story · %1$@";
 
 /* Indicates this message is a quoted reply to an attachment of unknown type. */
-"QUOTED_REPLY_TYPE_ATTACHMENT" = "Fichier joint";
+"QUOTED_REPLY_TYPE_ATTACHMENT" = "Pièce jointe";
 
 /* Indicates this message is a quoted reply to an audio file. */
 "QUOTED_REPLY_TYPE_AUDIO" = "Audio";
@@ -6278,7 +6278,7 @@
 "SECONDARY_DEVICE_ERROR_FETCHING_LINKING_CODE" = "Impossible de récupérer le code d’association.";
 
 /* Message for error alert indicating that re-linking failed because the account did not match. */
-"SECONDARY_LINKING_ERROR_DIFFERENT_ACCOUNT_MESSAGE" = "Pour associer cet appareil à un autre compte, vous devez d’abord le réinitialiser. Voulez-vous vraiment effacer tout l’historique de cet appareil : messages, fichiers joints, appels, etc. ? Cette action est irréversible.";
+"SECONDARY_LINKING_ERROR_DIFFERENT_ACCOUNT_MESSAGE" = "Pour associer cet appareil à un autre compte, vous devez d’abord le réinitialiser. Voulez-vous vraiment effacer tout l'historique de cet appareil : messages, pièces jointes, appels, etc. ? Cette action est irréversible.";
 
 /* Label for the 'reset device' action in the 're-linking failed because the account did not match' alert. */
 "SECONDARY_LINKING_ERROR_DIFFERENT_ACCOUNT_RESET_DEVICE" = "Tout supprimer";
@@ -6638,7 +6638,7 @@
 "SETTINGS_DELETE_DATA_BUTTON" = "Supprimer toutes les données";
 
 /* Alert message before user confirms clearing history */
-"SETTINGS_DELETE_HISTORYLOG_CONFIRMATION" = "Voulez-vous vraiment effacer tout l’historique (messages, fichiers joints, appels, etc.) ? Cette action est irréversible.";
+"SETTINGS_DELETE_HISTORYLOG_CONFIRMATION" = "Voulez-vous vraiment effacer tout l’historique (messages, pièces jointes, appels, etc.) ? Cette action est irréversible.";
 
 /* Confirmation text for button which deletes all message, calling, attachments, etc. */
 "SETTINGS_DELETE_HISTORYLOG_CONFIRMATION_BUTTON" = "Tout supprimer";
@@ -7394,7 +7394,7 @@
 "SHARE_EXTENSION_NOT_YET_MIGRATED_TITLE" = "Pas prête";
 
 /* Alert title */
-"SHARE_EXTENSION_SENDING_FAILURE_TITLE" = "Impossible d’envoyer le fichier joint";
+"SHARE_EXTENSION_SENDING_FAILURE_TITLE" = "Impossible d'envoyer la pièce jointe";
 
 /* Send progress for share extension. Embeds {{ %1$@ number of attachments uploaded, %2$@ total number of attachments}} */
 "SHARE_EXTENSION_SENDING_IN_PROGRESS_FORMAT" = "Importation de %1$@ sur %2$@…";
@@ -7403,7 +7403,7 @@
 "SHARE_EXTENSION_SENDING_IN_PROGRESS_TITLE" = "Importation…";
 
 /* Shown when trying to share content to a Signal user for the share extension. Followed by failure details. */
-"SHARE_EXTENSION_UNABLE_TO_BUILD_ATTACHMENT_ALERT_TITLE" = "Impossible de préparer le fichier joint";
+"SHARE_EXTENSION_UNABLE_TO_BUILD_ATTACHMENT_ALERT_TITLE" = "Impossible de préparer la pièce jointe";
 
 /* Title for the 'share extension' view. */
 "SHARE_EXTENSION_VIEW_TITLE" = "Partager vers Signal";
@@ -8123,7 +8123,7 @@
 "UNREAD_ACTION" = "Non lu";
 
 /* No comment provided by engineer. */
-"UNSUPPORTED_ATTACHMENT" = "Un type de fichier joint non pris en charge a été reçu.";
+"UNSUPPORTED_ATTACHMENT" = "Le type de fichier reçu n'est pas pris en charge.";
 
 /* When inviting contacts to use Signal, this error is shown if the device doesn't support SMS or if there aren't any registered email accounts. */
 "UNSUPPORTED_FEATURE_ERROR" = "Votre appareil ne prend pas cette fonction en charge";
